--- a/timecode-calculator/.gitignore
+++ b/timecode-calculator/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+drafts.tsx
+
+
 # dependencies
 /node_modules
 /.pnp
