--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,19 +22,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       
-      
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
     - name: Install dependencies 
       run: npm ci
     
     - name: Build application
-    - run: npm run build --if-present
+      run: npm run build --if-present
     
     - name: Test application
-    - run: npm test
+      run: npm test
 
     - name: test secret
       run: echo ${{ secrets.TEST_SECRET }}
